<resources>
    <string name="app_name">StingyApp</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_nav_transactions">Transactions</string>
    <string name="bottom_nav_future">Future</string>
    <string name="tl_text">TL</string>
    <string name="transaction_input">Transaction Name</string>
    <string name="amount_input">Amount</string>
    <string name="installment_input">Pay With Installment</string>
    <string name="months">Months</string>
    <string name="transaction_type">Type</string>
    <string name="category_input">Category</string>
    <string name="transaction_date">Date</string>
    <string name="tl_icon_text">₺</string>
    <string name="save_button_text">SAVE</string>
    <string name="add_button_text">Add</string>
</resources>