<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.alikizilcan.stingyapp.ui.add.AddTransactionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#212529"
        android:paddingHorizontal="25dp"
        android:paddingVertical="100dp"
        tools:context=".ui.add.AddTransactionFragment"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transactionNameInput"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/transaction_input"
            app:hintTextAppearance="@style/LabelAppearance"
            app:hintTextColor="@color/light_blue"
            app:boxStrokeColor="@color/transaction_bg"
            app:boxBackgroundColor="@color/transaction_bg"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_payment"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transactionAmountInput"
            app:hintTextAppearance="@style/LabelAppearance"
            app:hintTextColor="@color/light_blue"
            app:boxStrokeColor="@color/transaction_bg"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/amount_input"
            app:boxBackgroundColor="@color/transaction_bg"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionNameInput"
            app:startIconDrawable="@drawable/ic_amount"
            android:layout_marginTop="5dp"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={viewModel.amount}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/selectDateButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/transaction_bg"
            android:drawableEnd="@drawable/ic_date"
            android:text="@{viewModel.date}"
            android:textColor="@color/dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/installmentMonthInput"
            android:layout_marginTop="5dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transactionCategoryInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/category_input"
            app:hintTextColor="@color/light_blue"
            app:boxStrokeColor="@color/transaction_bg"
            app:boxBackgroundColor="@color/transaction_bg"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionAmountInput"
            android:layout_marginTop="5dp"
            >

            <AutoCompleteTextView
                android:id="@+id/categoryList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@={viewModel.category}"
                android:paddingHorizontal="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transactionType"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/transaction_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:hintTextAppearance="@style/LabelAppearance"
            app:hintTextColor="@color/light_blue"
            app:boxStrokeColor="@color/transaction_bg"
            app:boxBackgroundColor="@color/transaction_bg"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toStartOf="@id/hasInstallmentCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionCategoryInput"
            app:startIconDrawable="@drawable/ic_transactions"
            android:layout_marginTop="5dp"
            >
            <AutoCompleteTextView
                android:id="@+id/typeList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@={viewModel.type}" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/hasInstallmentCheck"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:buttonTint="@color/transaction_bg"
            android:checked="@={viewModel.isVisibleView}"
            android:text="@string/installment_input"
            android:textAlignment="center"
            android:textColor="@color/transaction_bg"
            app:layout_constraintBottom_toBottomOf="@id/transactionType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/transactionType"
            app:layout_constraintTop_toTopOf="@id/transactionType"
            setClickable="@{viewModel.type}"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/installmentMonthInput"
            setVisibility="@{viewModel.isVisibleView}"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/months"
            app:hintTextAppearance="@style/LabelAppearance"
            app:hintTextColor="@color/light_blue"
            app:boxStrokeColor="@color/transaction_bg"
            app:boxBackgroundColor="@color/transaction_bg"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionType"
            app:startIconDrawable="@drawable/ic_month"
            android:layout_marginTop="5dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:text="@={viewModel.installmentCount}" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"
            android:text="@string/save_button_text"
            android:textColor="#EDEDED"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>